# competitive-programming

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  bit.cpp  bit_max.cpp  dfs.cpp  dijkstra.cpp  init.sh  mod_int.cpp  mod_inverse.cpp  prime_factorization.cpp  run.template  segtree.cpp  submission.template  task.template  template.cpp  tool.cpp  union_find.cpp  z_algorithm.cpp
graph/: dijkstra.cpp  lca.cpp
segtree/: range_maximum_query.cpp  range_minimum_query.cpp  range_update_query.cpp
